LPS-74880 - Fix blog new entry alignment

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_grid.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_grid.scss
@@ -5,6 +5,10 @@
 	}
 }
 
+[class*="-offset-"] {
+	@extend .mx-auto;
+}
+
 .container-fluid-1280 {
 	@include clearfix;
 }
